--- a/SolidityTutorial06222020.2
+++ b/SolidityTutorial06222020.2
@@ -1,6 +1,6 @@
 pragma solidity 0.5.1;
 
-//Libraries
+//Libraries explained
 //Can hold lots of functions for
 //continuous calling.
 //libraries are meant to be used
